--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.16.0",
+    "immutability-helper": "^2.1.2",
+    "js-cookie": "^2.1.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
