--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.1",
-    "nodemon": "^1.11.0"
+    "mongoose": "^4.9.3",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-http-bearer": "^1.0.1"
   }
 }
