--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "mongoose": "^4.9.3",
     "nodemon": "^1.11.0",
